[gd_scene load_steps=10 format=2]

[ext_resource path="res://World/enemy.png" type="Texture" id=1]
[ext_resource path="res://Component/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entity/Monster/Enemy.gd" type="Script" id=3]
[ext_resource path="res://Component/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Entity/Weapon/Weapon.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entity/Weapon/Fireball/Fireball.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 82.7673

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.56013
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 10

[node name="PlayerSight" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSight"]
position = Vector2( 0.917419, -3.2121 )
shape = SubResource( 3 )
one_way_collision_margin = 0.0

[node name="Weapon" parent="." instance=ExtResource( 5 )]
visible = false
projectile = ExtResource( 6 )

[node name="RayCast2D" type="RayCast2D" parent="."]
collide_with_bodies = false

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="body_entered" from="PlayerSight" to="." method="_on_PlayerSight_body_entered"]
[connection signal="body_exited" from="PlayerSight" to="." method="_on_PlayerSight_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Hurtbox"]
